--- a/07-Asciidoc/release_notes.html
+++ b/07-Asciidoc/release_notes.html
@@ -1,6 +1,6 @@
-#Release Notes
+== Release Notes
 
-**Version 2.0.0**
+=== Version 2.0.0**
 
 * Adds an *eProcurement Glossary*
 * Extends the methodological approach adopted in v1.0
@@ -13,7 +13,7 @@
 ** PoC focused on Use Case 1: Journalism and Transparency
 ** Enhances the on-line documentation
 
-**Version 1.0**
+=== Version 1.0
 
 * Defines of three Use Cases:
 ** Use Case 1: Data Journalism
