--- a/02_IR_DED/xlst/glossary.html
+++ b/02_IR_DED/xlst/glossary.html
@@ -40,7 +40,7 @@
             Foundational e-Forms, the ePO Glossary and the Data Element Dictionary (DED)</a></b>", which takes its definitions from the ePO Glossary (click on the link to download this spreadsheet).
     </p>
     <p>
-        The transfomation is based on two XSL-T stylesheets. The resources used to generate the page can be downloaded from the folder "<a href="https://github.com/eProcurement-everis/ePO/tree/master/02_IR_DED/xlst" style="text-decoration:none;">02_IR_DED/xslt</a>", in the ePO Github source repository.
+        The transfomation is based on two XSL-T stylesheets. The resources used to generate the page can be downloaded from the folder "<a href="https://github.com/eProcurement-everis/ePO/tree/master/02_IR_DED/xlst" style="text-decoration:none;">02_IR_DED/xslt</a>", in the ePO Github source repository. Any suggestion to improve its layout and behaviour will be appreciated.
     </p>
     
 </div>
